# VRRW-ROS

./: .gitignore  .gitmodules  README.md
catkin_ws/src/rvl_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/rvl_gazebo/backup/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  rvl_ur.xacro
catkin_ws/src/rvl_gazebo/config/: controllers.yaml  rvl_controllers.yaml
catkin_ws/src/rvl_gazebo/config/robotiq/: robotiq_2f_controllers.yaml
catkin_ws/src/rvl_gazebo/config/universal_robots/: ur10_controllers.yaml  ur3e_controllers.yaml
catkin_ws/src/rvl_gazebo/include/realsense_l515_gazebo_plugin/: gazebo_ros_realsense.h
catkin_ws/src/rvl_gazebo/launch/: empty_gazebo.launch  erb_vr_scene.launch  multi_robot.launch  rvl_bringup.launch  test_arm.launch  test_camera.launch  test_rvl_ur5e.launch  unified_ur_bringup.launch  ur_bringup.launch
catkin_ws/src/rvl_gazebo/launch/universal_robots/: ur10_bringup.launch  ur10e_bringup.launch  ur16e_bringup.launch  ur3_bringup.launch  ur3e_bringup.launch  ur5_bringup.launch  ur5e_bringup.launch
catkin_ws/src/rvl_gazebo/scripts/: exec_joint_traj_file.py  tase-promp-pick_to_drop.txt
catkin_ws/src/rvl_gazebo/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
catkin_ws/src/rvl_gazebo/urdf/: rvl_gazebo.urdf
catkin_ws/src/rvl_gazebo/xacro/: dumpster.xacro  rvl_gazebo.xacro  rvl_gazebo_macro.xacro  rvl_ur5e_gazebo.xacro  ur.xacro  ur_macro.xacro
catkin_ws/src/rvl_gazebo/xacro/macros/: rs_l515_addon.xacro  rs_l515_addon_rsgz.xacro
catkin_ws/src/rvl_gazebo/xacro/universal_robots/: ur.xacro  ur_macro.xacro
catkin_ws/src/rvl_robot_description/: CMakeLists.txt  nomenclature.md  package.xml
catkin_ws/src/rvl_robot_description/config/: view_rvl_robot.rviz  view_rvl_ur.rviz
catkin_ws/src/rvl_robot_description/launch/: test_rvl_arm_loading.launch  view_fetch_model.launch  view_multibot.launch  view_realsense_model.launch  view_robotiq_model.launch  view_rvl_arm.launch  view_rvl_model.launch  view_ur_model.launch
catkin_ws/src/rvl_robot_description/rviz/: view_fetch.rviz  view_freight.rviz  view_multibot.rviz  view_ur.rviz
catkin_ws/src/rvl_robot_description/scripts/: common.xacro  link.xacro  segment_generator.py
catkin_ws/src/rvl_robot_description/urdf/: multibot.urdf  rvl_ur.urdf  rvl_ur10e.urdf  rvl_ur3e.urdf
catkin_ws/src/rvl_robot_description/xacro/: rvl_ur5e.xacro  rvl_ur5e.xacro.urdf
catkin_ws/src/rvl_unity_communicator/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/rvl_unity_communicator/launch/: start_backend.launch  start_real_robot.launch
catkin_ws/src/rvl_unity_communicator/scripts/: MotionPlanningServer.py
catkin_ws/src/rvl_unity_communicator/srv/: ArmPlanning.srv
catkin_ws/src/unity_ros_backend/robotiq_ros_wrapper/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/unity_ros_backend/robotiq_ur_ros_wrapper/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/unity_ros_backend/unity_motion_control/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/unity_ros_backend/unity_ros_backend/: CMakeLists.txt  package.xml
catkin_ws/src/unity_ros_backend/ur_remote_dashboard/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/ur_remote_control/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/ur_remote_control/configs/: view_rvl_ur5e.rviz
catkin_ws/src/ur_remote_control/launch/: custom_ur5e_robotiq_2f_85_bringup.launch  load_rvl_ur5e.launch  view_rvl_ur5e.launch
catkin_ws/src/ur_remote_control/msg/: Robotiq2FCommand.msg
catkin_ws/src/ur_remote_control/nodes/: Robotiq2FNode.py
catkin_ws/src/ur_remote_control/urdf/: rvl_ur5e.xacro  rvl_ur5e.xacro.urdf
unity_ros_backend/unity_robot_description/: CMakeLists.txt  package.xml
unity_ros_backend/unity_robot_description/config/ur10/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur10e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur16e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur3/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur3e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur5/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/config/ur5e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/configs/: view_robotiq_3f.rviz
unity_ros_backend/unity_robot_description/configs/ur10e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/configs/ur3/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/configs/ur3e/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/configs/ur5/: visual_parameters.yaml
unity_ros_backend/unity_robot_description/launch/robotiq/: load_robotiq_2f_140.launch  load_robotiq_2f_85.launch  view_robotiq_2f_140.launch  view_robotiq_2f_c2.launch
unity_ros_backend/unity_robot_description/launch/universal_robot/: load_ur10.launch  load_ur10e.launch  load_ur5e.launch  view_ur10.launch  view_ur10e.launch  view_ur16e.launch  view_ur3.launch  view_ur3e.launch
unity_ros_backend/unity_robot_description/urdf/: ur5e_2f_85.urdf  ur5e_robotiq_2f_85.urdf
unity_ros_backend/unity_robot_description/urdf/unity_compat/: ur5e_2f_85_compat.urdf
unity_ros_backend/unity_robot_description/urdf/unity_compatible/: README.md  robotiq_extra_collisions.urdf  unity_ur5e_robotiq_2f_85.urdf
unity_ros_backend/unity_robot_description/xacro/: test_robotiq.xacro  test_ur.xacro  ur5e_2f_85.xacro  ur5e_2f_85_gripper.xacro
unity_ros_backend/unity_robot_description/xacro/macros/: robotiq_arg2f_85_macro.xacro  robotiq_arg2f_c2_macro.xacro  ur10e_macro.xacro  ur16e_macro.xacro  ur3_macro.xacro  ur_macro.xacro
unity_ros_backend/unity_robot_description/xacro/robots/: robotiq_arg2f_140.xacro  robotiq_arg2f_c2.xacro  ur.xacro  ur10.xacro  ur3.xacro  ur3e.xacro  ur5e.xacro
unity_ros_backend/unity_robot_description/xacro/universal_robot/: ur.xacro  ur10.xacro  ur10e.xacro  ur16e.xacro  ur3.xacro  ur3e.xacro  ur5.xacro  ur5e.xacro
unity_ros_backend/unity_ros/: CMakeLists.txt  package.xml
(+661 files in other folders)
