<?xml version="1.0"?>
<package format="2">
  <name>unity_robot_description</name>
  <version>0.0.0</version>
  <description>The unity_robot_description package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>
  <exec_depend>robotiq_2f_140_gripper_visualization</exec_depend>
  <exec_depend>robotiq_2f_c2_gripper_visualization</exec_depend>
  <exec_depend>robotiq_3f_gripper_visualization</exec_depend>
</package>
