<?xml version="1.0"?>
<package format="2">
  <name>unity_ros</name>
  <version>0.0.0</version>
  <description>The unity_ros package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>unity_robot_description</exec_depend>
  <exec_depend>unity_moveit_planning</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
