<?xml version="1.0"?>
<package format="2">
  <name>rvl_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation of robots available in Robotic Vision Laboratory.</description>

  <maintainer email="minh.tram@mavs.uta.edu">Minh Tram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>ur_description</depend>

  <export>
  </export>
</package>
