<?xml version="1.0"?>
<package format="2">
    <name>rvl_gazebo</name>
    <version>0.0.0</version>
    <description>The rvl_gazebo package</description>

    <maintainer email="minh.tram@mavs.uta.edu">Minh Tram</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roslaunch</depend>
    <depend>controller_manager</depend>
    <depend>effort_controllers</depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_ros_control</depend>
    <depend>joint_state_controller</depend>
    <depend>joint_trajectory_controller</depend>
    <depend>position_controllers</depend>
    <depend>robot_state_publisher</depend>
    <depend>rqt_joint_trajectory_controller</depend>

    <!-- realsense plugin dependencies -->
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>camera_info_manager</depend>

    <export></export>
</package>