<?xml version="1.0"?>
<package format="2">
    <name>rvl_robot_description</name>
    <version>0.0.0</version>
    <description>The rvl_robot_description package</description>

    <maintainer email="minh.tram@mavs.uta.edu">Minh Tram</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>joint_state_publisher_gui</depend>
    <depend>robot_state_publisher</depend>
    <depend>rviz</depend>
    <depend>urdf</depend>
    <depend>xacro</depend>

    <export></export>
</package>