<?xml version="1.0"?>
<package format="2">
  <name>rvl_unity_communicator</name>
  <version>0.0.0</version>
  <description>The rvl_unity_communicator package</description>

  <maintainer email="minh.tram@mavs.uta.edu">Minh "Jerry" Tram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- generate custom messages -->
  <build_depend>message_generation</build_depend>

  <!-- ROS standard packages -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export></export>
</package>
