<?xml version="1.0"?>
<package format="2">
  <name>ur_remote_control</name>
  <version>0.0.0</version>
  <description>An interface wrapper for Official UR ROS 1 Driver</description>

  <maintainer email="minh.tram@mavs.uta.edu">Minh "Jerry" Tram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <!-- Python 3 packages -->
  <depend>python3-pymodbus</depend>
  <depend>python3-numpy</depend>
  <depend>python3-colorama</depend>

  <!-- ROS standard packages -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- MoveIt! -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <!-- visualization -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <!-- dependencies -->
  <depend>ur_dashboard_msgs</depend>
</package>
