<?xml version="1.0"?>
<package format="2">
  <name>robotiq_ur_ros_wrapper</name>
  <version>0.0.0</version>
  <description>The robotiq_ur_ros_wrapper package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>ur_dashboard_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-modbus</depend>

</package>
