<?xml version="1.0"?>
<package format="2">
  <name>unity_ros_backend</name>
  <version>0.0.0</version>
  <description>The unity_ros_backend package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>unity_robot_description</exec_depend>
  <exec_depend>robotiq_ur_ros_wrapper</exec_depend>
  <exec_depend>ur_remote_dashboard</exec_depend>
  <exec_depend>ur5e_robotiq_2f_85_moveit_config</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
